fix: vertical scrollbar issue

--- a/src/plugins/dev_tools/public/dev_tools_icon.scss
+++ b/src/plugins/dev_tools/public/dev_tools_icon.scss
@@ -23,3 +23,10 @@
   padding-right: $euiSize;
   margin-top: 0;
 }
+
+// When there are multiple maskOverlays in the page and once a focused overlay get unmounted
+// it will remove the hasOverlay class in the root element, making the whole page scrollable.
+// This class is used for keep the root element unscrollable when the dev tools model is mount.
+.noScrollByDevTools {
+  overflow: hidden;
+}
